--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,3 +85,14 @@ font-weight: lighter;
 .tab-pane{
    margin-top: 5%;
 }
+
+.div_update {
+  margin: 0 auto;
+  margin-top: 50px;
+  box-shadow: 0 3px 6px #38383847;
+  padding: 35px;
+}
+.input-group-addon{
+  margin: auto;
+  margin-right: 15px ;
+}
