--- a/app/assets/javascripts/views/users/homeAdmin.html
+++ b/app/assets/javascripts/views/users/homeAdmin.html
@@ -32,7 +32,7 @@
             <grid-column title="Solde" field="solde"></grid-column>
             <grid-column title="Créer le" field="created_at"></grid-column>
           </grid-columns>
-          <grid with-inline-editor></grip>
+          <grid with-inline-editor></grid>
         </grid-screen>
       </div>
     </div>
@@ -185,7 +185,6 @@
       </div>
     </div>
   </div>
-
 <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
