--- a/app/assets/javascripts/template/users/entete.html
+++ b/app/assets/javascripts/template/users/entete.html
@@ -18,7 +18,7 @@
         <i class="fa fa-user-circle"></i>
         </button>
         <div class="dropdown-menu" style="margin-left: -96px;" >
-            <a style="color :#000" class="nav-link" href="#">Profil</a>
+            <a style="color :#000" class="nav-link" href="/profil">Profil</a>
             <a style="color :#000" class="nav-link" ng-click="logout()" href="#">Se déconnecter</a>
         </div>
       </div>
