--- a/app/assets/javascripts/views/users/homeUser.html
+++ b/app/assets/javascripts/views/users/homeUser.html
@@ -43,7 +43,7 @@
            </div>
            <div class="modal-footer">
              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-           <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-primary">Demande</button>
+             <button type="submit" class="btn btn-primary">Demande</button>
            </div>
        </form>
        </div>
