--- a/app/assets/javascripts/template/users/user_table_demands.html
+++ b/app/assets/javascripts/template/users/user_table_demands.html
@@ -85,38 +85,38 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <form name="myForm" ng-submit="sendDemande()">
+
+        <form name="myForm" ng-submit="updateDemande()">
           <div class="modal-body">
               <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
-                Demande enregistré :) !
+                Modification enregistré !
               </div>
               <div class="alert alert-danger col-md-5" ng-if="showMsgError" role="alert">
-                échec d'envoi !
+                échec de modification !
               </div>
               <div class="row col-md-12">
                 <div class="col-md-6">
                   <label class=" col-form-label">Date début</label>
-                  <input required ng-model="dateD" class="form-control" type="date">
+                  <input required ng-model="myModel[0].date_debut" class="form-control" type="text">
                 </div>
                 <div class="col-md-6">
                   <label class="col-form-label">Date fin</label>
-                  <input required ng-model="dateF" class="form-control" type="date">
+                  <input required ng-model="myModel[0].date_fin" class="form-control" type="text" >
                 </div>
                 <hr>
                 <div class="col-md-12">
                   <label class="col-form-label">Motif d'absence</label>
-                  <input type="text "class="form-control" required ng-model="motifAb" id="exampleFormControlTextarea1" rows="3"></input>
+                  <input type="text "class="form-control" ng-model="myModel[0].motifAb" required id="exampleFormControlTextarea1" rows="3">
                 </div>
                 <div class="modal-footer" >
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-                  <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="deleteDemande(myModel[0].id)">Modifier</button>
+                  <button type="submit" class="btn btn-primary">Modifier</button>
                 </div>
               </div>
               <p></p>
           </div>
       </form>
-      </div>
+
 
     </div>
   </div>
