--- a/app/assets/javascripts/views/users/profileAdmin.html
+++ b/app/assets/javascripts/views/users/profileAdmin.html
@@ -38,10 +38,10 @@
             </div>
           </div>
           <div class="form-group ">
-            <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-primary btn-lg btn-block">Modifier</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Modifier</button>
           </div>
         </form>
-        <a style="cursor:pointer;color:blue " data-toggle="modal" data-target="#updatePasswordModal"> Voulez-vous changer votre mot de passe ? </a>
+        <a style="cursor:pointer;color:blue " ng-click="refreshData()" data-toggle="modal" data-target="#updatePasswordModal"> Voulez-vous changer votre mot de passe ? </a>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form name="myForm" ng-submit="updatePassword()">
+      <form name="myForm" ng-submit="updatePasswordModal()">
         <div class="modal-body">
           <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
             Demande enregistré :) !
@@ -63,18 +63,13 @@
           <div class="alert alert-danger col-md-5" ng-if="showMsgError" role="alert">
             échec d'envoi !
           </div>
-
-          <div class="col-md-12">
-            <label class=" col-form-label">Votre ancien mot de passe</label>
-            <input required ng-model="pwd" class="form-control" type="password">
-          </div>
           <div class="col-md-12">
             <label class="col-form-label">Nouveau mot de passe</label>
-            <input required ng-model="newPwd" class="form-control" type="password">
+            <input required ng-model="parameters.password" class="form-control" type="password">
           </div>
           <div class="col-md-12">
             <label class="col-form-label">Confirmez votre mot de passe</label>
-            <input type="password " class="form-control" required ng-model="cNewPwd" id="exampleFormControlTextarea1"></input>
+            <input type="password " class="form-control" required ng-model="parameters.password_confirmation" ></input>
           </div>
         </div>
         <div class="modal-footer">
