ADD USER - ADMIN

--- a/app/assets/javascripts/views/users/profileAdmin.html
+++ b/app/assets/javascripts/views/users/profileAdmin.html
@@ -55,7 +55,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form name="myForm" ng-submit="updatePasswordModal()">
+      <form name="myForm" ng-submit="updatePassword()">
         <div class="modal-body">
           <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
             Demande enregistré :) !
