--- a/app/assets/javascripts/views/users/homeAdmin.html
+++ b/app/assets/javascripts/views/users/homeAdmin.html
@@ -13,7 +13,7 @@
   </li>
   <li>
     <a href="#nonTraitees" role="tab" data-toggle="tab" class="nav-link" target="_self" target="_self">
-     Demandes traitées
+      Demandes traitées
     </a>
   </li>
 </ul>
@@ -22,6 +22,9 @@
   <div class="tab-pane active" id="users">
     <div class="container">
       <div class="row">
+        <div class="col-md-12">
+          <button data-toggle="modal" data-target="#addUserModale" class="btn btn-secondary" style="background-color:#383838">Ajouter un utilisateur</button>
+        </div>
         <grid-screen>
           <grid-columns>
             <grid-column title="#" field="id"></grid-column>
@@ -37,173 +40,254 @@
       </div>
     </div>
   </div>
-<div class="tab-pane" id="traitees">
-  <div class="container">
-    <div class="row" >
-      <h5 class="my-sm-0" align="center" >Liste des demandes non traitée</h5>
-      <div class="float-right" style="margin-left: 30%;">
-        <form class="form-inline" autocomplete="off" align="center">
-          <input ng-keyup="complete(motCle)" ng-model=motCle ng-change="find()" class="form-control " type="search" placeholder="Rechercher" aria-label="Search">
-        </form>
-        <div class="autocompleteAdmin">
-          <ul class="list-group">
-            <li class="list-group-item py-2" ng-repeat="item in filterList track by $index">{{item}}</li>
-          </ul>
+  <div class="tab-pane" id="traitees">
+    <div class="container">
+      <div class="row">
+        <h5 class="my-sm-0" align="center">Liste des demandes non traitée</h5>
+        <div class="float-right" style="margin-left: 30%;">
+          <form class="form-inline" autocomplete="off" align="center">
+            <input ng-keyup="complete(motCle)" ng-model=motCle ng-change="find()" class="form-control " type="search" placeholder="Rechercher" aria-label="Search">
+          </form>
+          <div class="autocompleteAdmin">
+            <ul class="list-group">
+              <li class="list-group-item py-2" ng-repeat="item in filterList track by $index">{{item}}</li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <table class="table table-striped table-bordered">
-        <thead class="table-primary">
-          <tr>
-            <th  scope="col">Salarié
-              <a ng-click="set('etat')"  >
-                <i class="fa fa-fw fa-sort"></i>
-              </a>
-            </th>
-            <th  scope="col">Date début
-              <a ng-click="set('etat')"  >
-                <i class="fa fa-fw fa-sort"></i>
-              </a>
-            </th>
-            <th  scope="col">Date fin
-              <a ng-click="set('etat')"  >
-                <i class="fa fa-fw fa-sort"></i>
-              </a>
-            </th>
-            <th  scope="col">Motif d’absence
-              <a ng-click="set('etat')"  >
-                <i class="fa fa-fw fa-sort"></i>
-              </a>
-            </th>
-            <th scope="col">Action
-            </th>
-          </tr>
-        </thead>
-        <tbody class="">
-          <tr ng-repeat="demandeNonT in demandesNonT track by $index">
-            <td>{{demandeNonT.user.nom}} {{demandeNonT.user.prenom}} </td>
-            <td>{{demandeNonT.date_debut}}</td>
-            <td>{{demandeNonT.date_fin}}</td>
-            <td>{{demandeNonT.motifAb}}</td>
-            <td><a href="#" class="badge badge-success" ng-click="sendAccept($event,demandeNonT.id,demandeNonT.user.id,demandeNonT.date_debut,demandeNonT.date_fin,demandeNonT.user.solde)">Valider</a> -
-              <a href="#" class="badge badge-danger" ng-click="saveIdCongeDemand(demandeNonT.id)" data-toggle="modal" data-target="#exampleModal">Rejeter</a></td>
-          </tr>
-        </tbody>
-      </table>
-      <nav aria-label="..." ng-if="pagesDNT.length>1">
-        <ul class="pagination pagination-sm ">
-          <li class="page-item " ng-class="{active : ActivePageDNT===page}" ng-repeat="page in pagesDNT">
-            <a class="page-link " ng-click="reloadDNTPage(page)" href="#">{{page}}</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
-        demande enregistrée :) !
-      </div>
-      <div class="alert alert-success col-md-5" ng-if="showMsgError" role="alert">
-        échec d'envoi !
+        <table class="table table-striped table-bordered">
+          <thead class="table-primary">
+            <tr>
+              <th scope="col">Salarié
+                <a ng-click="set('etat')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Date début
+                <a ng-click="set('etat')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Date fin
+                <a ng-click="set('etat')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Motif d’absence
+                <a ng-click="set('etat')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Action
+              </th>
+            </tr>
+          </thead>
+          <tbody class="">
+            <tr ng-repeat="demandeNonT in demandesNonT track by $index">
+              <td>{{demandeNonT.user.nom}} {{demandeNonT.user.prenom}} </td>
+              <td>{{demandeNonT.date_debut}}</td>
+              <td>{{demandeNonT.date_fin}}</td>
+              <td>{{demandeNonT.motifAb}}</td>
+              <td><a href="#" class="badge badge-success" ng-click="sendAccept($event,demandeNonT.id,demandeNonT.user.id,demandeNonT.date_debut,demandeNonT.date_fin,demandeNonT.user.solde)">Valider</a> -
+                <a href="#" class="badge badge-danger" ng-click="saveIdCongeDemand(demandeNonT.id)" data-toggle="modal" data-target="#exampleModal">Rejeter</a></td>
+            </tr>
+          </tbody>
+        </table>
+        <nav aria-label="..." ng-if="pagesDNT.length>1">
+          <ul class="pagination pagination-sm ">
+            <li class="page-item " ng-class="{active : ActivePageDNT===page}" ng-repeat="page in pagesDNT">
+              <a class="page-link " ng-click="reloadDNTPage(page)" href="#">{{page}}</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
+          demande enregistrée :) !
+        </div>
+        <div class="alert alert-success col-md-5" ng-if="showMsgError" role="alert">
+          échec d'envoi !
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div class="tab-pane" id="nonTraitees">
-  <div class="container">
-  <div class="row">
-    <h5 align="center">Liste des demandes traitées </h5>
-    <table class="table table-hover">
-      <thead class="table-primary">
-        <tr>
-          <th scope="col">Salarié
-            <a ng-click="set('demandeT.user.nom')"  >
-              <i class="fa fa-fw fa-sort"></i>
-            </a>
-          </th>
-          <th scope="col">Date début
-              <a ng-click="set('demandeT.date_debut')"  >
-              <i class="fa fa-fw fa-sort"></i>
-            </a>
-          </th>
-          <th scope="col">Date fin
-            <a ng-click="set('demandeT.date_fin')"  >
-              <i class="fa fa-fw fa-sort"></i>
-            </a>
-          </th>
-          <th scope="col">Motif d’absence
-              <a ng-click="set('motifAb')"  >
-              <i class="fa fa-fw fa-sort"></i>
-            </a>
-          </th>
-          <th scope="col">Etat
-            <a ng-click="set('etat')"  >
-              <i class="fa fa-fw fa-sort"></i>
-            </a>
-          </th>
-        </tr>
-      </thead>
-      <tbody class="">
-        <tr data-toggle="modal" data-target="#exampleModal2" ng-repeat="demandeT in demandesT |orderBy:orderByField:reverseSort" ng-click="getModelInfo(demandeT.id)">
-          <td>{{demandeT.user.nom}} {{demandeT.user.prenom}} </td>
-          <td>{{demandeT.date_debut}}</td>
-          <td>{{demandeT.date_fin}}</td>
-          <td>{{demandeT.motifAb}}</td>
-          <td>{{demandeT.etat}}</td>
-        </tr>
-      </tbody>
-    </table>
-    <nav aria-label="..." ng-if="pagesDT.length>1">
-      <ul class="pagination pagination-sm ">
-        <li class="page-item " ng-class="{active : ActivePageDT===page}" ng-repeat="page in pagesDT">
-          <a class="page-link " ng-click="reloadDTPage(page)" href="#">{{page}}</a>
-        </li>
-      </ul>
-    </nav>
+  <div class="tab-pane" id="nonTraitees">
+    <div class="container">
+      <div class="row">
+        <h5 align="center">Liste des demandes traitées </h5>
+        <table class="table table-hover">
+          <thead class="table-primary">
+            <tr>
+              <th scope="col">Salarié
+                <a ng-click="set('demandeT.user.nom')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Date début
+                <a ng-click="set('demandeT.date_debut')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Date fin
+                <a ng-click="set('demandeT.date_fin')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Motif d’absence
+                <a ng-click="set('motifAb')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+              <th scope="col">Etat
+                <a ng-click="set('etat')">
+                  <i class="fa fa-fw fa-sort"></i>
+                </a>
+              </th>
+            </tr>
+          </thead>
+          <tbody class="">
+            <tr data-toggle="modal" data-target="#exampleModal2" ng-repeat="demandeT in demandesT |orderBy:orderByField:reverseSort" ng-click="getModelInfo(demandeT.id)">
+              <td>{{demandeT.user.nom}} {{demandeT.user.prenom}} </td>
+              <td>{{demandeT.date_debut}}</td>
+              <td>{{demandeT.date_fin}}</td>
+              <td>{{demandeT.motifAb}}</td>
+              <td>{{demandeT.etat}}</td>
+            </tr>
+          </tbody>
+        </table>
+        <nav aria-label="..." ng-if="pagesDT.length>1">
+          <ul class="pagination pagination-sm ">
+            <li class="page-item " ng-class="{active : ActivePageDT===page}" ng-repeat="page in pagesDT">
+              <a class="page-link " ng-click="reloadDTPage(page)" href="#">{{page}}</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </div>
-  </div>
-</div>
 </div>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="row ">
-            <div class="col">
-              <label for="exampleFormControlTextarea1">Ajouter un motif de refus :</label>
-              <textarea class="form-control" required ng-model="motifR" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row ">
+          <div class="col">
+            <label for="exampleFormControlTextarea1">Ajouter un motif de refus :</label>
+            <textarea class="form-control" required ng-model="motifR" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" ng-click="sendReject()" class="btn btn-primary">Confirmer</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" ng-click="sendReject()" class="btn btn-primary">Confirmer</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
+</div>
 <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <label>Date debut : {{myModel[0].date_debut}}</label></br>
-          <label>Date fin : {{myModel[0].date_fin}}</label></br>
-          <label>Etat : {{myModel[0].etat}}</label></br>
-          <label>Motif de l’absence : {{myModel[0].motifAb}}</label></br>
-          <label ng-if="myModel[0].motifR">Motif de refus : {{myModel[0].motifR}}</label></br>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <label>Date debut : {{myModel[0].date_debut}}</label></br>
+        <label>Date fin : {{myModel[0].date_fin}}</label></br>
+        <label>Etat : {{myModel[0].etat}}</label></br>
+        <label>Motif de l’absence : {{myModel[0].motifAb}}</label></br>
+        <label ng-if="myModel[0].motifR">Motif de refus : {{myModel[0].motifR}}</label></br>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
+</div>
+<div class="modal fade" id="addUserModale" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ajouter un utilisateur</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal" method="post" ng-submit="addUser()" name="myForm">
+          <div class="alert alert-danger" ng-if="showPasswordError" role="alert">
+            Veuillez vérifier votre mot de passe !
+          </div>
+          <div class="alert alert-danger" ng-if="showEmailError" role="alert">
+            Un compte existe déjà pour cette adresse mail !
+          </div>
+          <div class="form-group">
+            <label for="name" class="cols-sm-2 control-label">Nom</label>
+            <div class="cols-sm-10">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                <input type="text" class="form-control" ng-model="u.nom" id="nom" placeholder="Entez votre nom" required autofocus />
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="name" class="cols-sm-2 control-label">Prenom</label>
+            <div class="cols-sm-10">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                <input type="text" class="form-control" ng-model="u.prenom" id="prenom" placeholder="Entez votre prenom" required />
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="email" class="cols-sm-2 control-label">Email</label>
+            <div class="cols-sm-10">
+              <div class="rihabmer1input-group">
+                <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                <input type="email" class="form-control" ng-model="u.email" id="email" placeholder="Entez votre mail" required />
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="sel1">Role</label>
+            <select class="form-control" id="sel1" ng-model="u.role">
+              <option value="admin">Admin</option>
+              <option value="user">User</option>
+
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="password" class="cols-sm-2 control-label">Mot de passe <small>(6 caractére au minimum)</small></label>
+            <div class="cols-sm-10">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                <input type="password" class="form-control" ng-model="u.password" id="password" placeholder="Entez votre mot de passe" required />
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="confirm" class="cols-sm-2 control-label">confirmez mot de passe</label>
+            <div class="cols-sm-10">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                <input type="password" class="form-control" ng-model="passwordConfirm" id="confirm" placeholder="Confirmez votre mot de passe" required />
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group ">
+            <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-primary btn-lg btn-block login-button" style="background-color:#e6b31e ; border : 0px ;">S'inscrire</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
