--- a/app/assets/javascripts/template/users/entete.html
+++ b/app/assets/javascripts/template/users/entete.html
@@ -15,8 +15,8 @@
         <a class="nav-link" href="/profil">Profil</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" ng-click="logout()" href="/State">Se déconnecter</a>
+        <a class="nav-link" ng-click="logout()" href="#">Se déconnecter</a>
       </li>
-    </ul>  
+    </ul>
   </div>
 </nav>
