--- a/app/assets/javascripts/template/users/entete.html
+++ b/app/assets/javascripts/template/users/entete.html
@@ -9,7 +9,7 @@
         <a class="nav-link" href="/home">Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/State">L'état de l'équipe </a>
+        <a class="nav-link" href="/state">L'état de l'équipe </a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/profil">Profil</a>
