--- a/app/assets/javascripts/template/users/entete.html
+++ b/app/assets/javascripts/template/users/entete.html
@@ -14,6 +14,9 @@
       <li class="nav-item active">
         <a class="nav-link" ng-if="user.role =='user' " href="/State">L'état de l'équipe </a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" ng-if="user.role =='admin' " href="/state-team">L'état de l'équipe </a>
+      </li>
     </ul>
     <ul class="navbar-nav ">
       <div class="dropdown  btnProfil">
